--- a/lsp/package.json
+++ b/lsp/package.json
@@ -18,9 +18,12 @@
     "babel-loader": "^8.0.4",
     "bootstrap": "^4.1.3",
     "css-loader": "^2.0.0",
+    "jquery": "^3.3.1",
     "js-md5": "^0.7.3",
     "moment": "^2.22.2",
     "node-sass": "^4.10.0",
+    "popper": "^1.0.1",
+    "popper.js": "^1.14.6",
     "pug": "^2.0.3",
     "pug-loader": "^2.4.0",
     "pug-plain-loader": "^1.0.0",
